--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@tma.js/sdk": "^3.1.2",
     "@tma.js/sdk-vue": "^1.0.9",
+    "lucide-vue-next": "^0.555.0",
     "nuxt": "^4.2.1",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
-    "@tma.js/bridge": "^2.2.0"
+    "@nuxtjs/tailwindcss": "^6.14.0",
+    "@tma.js/bridge": "^2.2.0",
+    "sass": "^1.94.2"
   }
 }
