--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tma.js/sdk-vue": "^1.0.9",
     "lucide-vue-next": "^0.555.0",
     "nuxt": "^4.2.1",
+    "openai": "^6.10.0",
     "pinia": "^3.0.4",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3"
