--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@tma.js/bridge": "^2.2.0",
     "@types/markdown-it": "^14.1.2",
+    "pinia-plugin-persistedstate": "^4.7.1",
     "sass": "^1.94.2"
   }
 }
